# Split

./: .env  .replit  pyproject.toml  splitbot.py
plugins/imageprocessing/: example.json  image.py  nanonets.py
plugins/interface/: date.py  echo.py  error.py  help.py  history.py  queryhandler.py  start.py
